3.9.3/_sources/gallery/misc/index.rst.txt


.. _sphx_glr_gallery_misc:

.. _misc-examples-index:

Miscellaneous
=============



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example illustrates the use of the anchored objects without the helper classes found in mpl_toolkits.axes_grid1. This version of the figure is similar to the one found in /gallery/axes_grid1/simple_anchored_artists, but it is implemented using only the matplotlib namespace, without the help of additional toolkits.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_anchored_artists_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_anchored_artists.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Anchored Artists</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The lines intersecting the rectangle are colored in red, while the others are left as blue lines. This example showcases the intersects_bbox function.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_bbox_intersect_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_bbox_intersect.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Changing colors of lines intersecting a box</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Example of displaying your own contour lines and polygons using ContourSet.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_contour_manual_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_contour_manual.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Manual Contour</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Override the default reporting of coords as the mouse moves over the Axes in an interactive backend.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_coords_report_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_coords_report.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Coords Report</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Showcase Hammer projection by alleviating many features of Matplotlib.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_custom_projection_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_custom_projection.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Custom projection</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="I&#x27;m not trying to make a good-looking figure here, but just to show some examples of customizing rcParams on the fly.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_customize_rc_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_customize_rc.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Customize Rc</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Most pixel-based backends in Matplotlib use `Anti-Grain Geometry (AGG)`_ for rendering. You can modify the rendering of Artists by applying a filter via Artist.set_agg_filter.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_demo_agg_filter_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_demo_agg_filter.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">AGG filter</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Ribbon Box">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_demo_ribbon_box_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_demo_ribbon_box.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Ribbon Box</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Adding lines to a figure without any Axes.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_fig_x_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_fig_x.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Adding lines to figures</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fill Spiral">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_fill_spiral_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_fill_spiral.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fill Spiral</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Recursively find all objects that match some criteria">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_findobj_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_findobj_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Findobj Demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how the font tables relate to one another.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_font_indexing_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_font_indexing.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Font indexing</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example lists the attributes of an FT2Font object, which describe global font properties.  For individual character metrics, use the Glyph object, as returned by load_char.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_ftface_props_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_ftface_props.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Font properties</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Using a path patch to draw rectangles.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_histogram_path_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_histogram_path.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Building histograms using Rectangles and PolyCollections</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to set a hyperlinks on various kinds of elements.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_hyperlinks_sgskip_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_hyperlinks_sgskip.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Hyperlinks</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="You can use Matplotlib to generate thumbnails from existing images. Matplotlib relies on Pillow_ for reading images, and thus supports all formats supported by Pillow.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_image_thumbnail_sgskip_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_image_thumbnail_sgskip.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Image Thumbnail</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Some data structures, like dict, structured numpy array or pandas.DataFrame provide access to labelled data via string index access data[key].">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_keyword_plotting_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_keyword_plotting.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plotting with keywords</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example generates the current matplotlib logo.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_logos2_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_logos2.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Matplotlib logo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a demo of creating a pdf file with several pages, as well as adding metadata and annotations to pdf files.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_multipage_pdf_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_multipage_pdf.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multipage PDF</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Demo of using multiprocessing for generating data in one process and plotting in another.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_multiprocess_sgskip_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_multiprocess_sgskip.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multiprocessing</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a packed-bubble chart to represent scalar data. The presented algorithm tries to move all bubbles as close to the center of mass as possible while avoiding some collisions by moving around colliding objects. In this example we plot the market share of different desktop browsers. (source: https://gs.statcounter.com/browser-market-share/desktop/worldwidev)">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_packed_bubbles_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_packed_bubbles.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Packed-bubble chart</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Patheffect Demo">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_patheffect_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_patheffect_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Patheffect Demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="print png to standard out">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_print_stdout_sgskip_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_print_stdout_sgskip.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Print Stdout</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Rasterization converts vector graphics into a raster image (pixels). It can speed up rendering and produce smaller files for large data sets, but comes at the cost of a fixed resolution.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_rasterization_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_rasterization_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Rasterization for vector graphics</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The pyplot interface allows you to use setp and getp to set and get object properties respectively, as well as to do introspection on the object.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_set_and_get_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_set_and_get.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Set and get properties</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Demonstrate SVG filtering effects which might be used with Matplotlib.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_svg_filter_line_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_svg_filter_line.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">SVG Filter Line</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Demonstrate SVG filtering effects which might be used with Matplotlib. The pie chart drawing code is borrowed from pie_demo.py">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_svg_filter_pie_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_svg_filter_pie.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">SVG filter pie</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Demo of table function to display a table within a plot.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_table_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_table_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Table Demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Matplotlib&#x27;s .patheffects can be used to alter the way paths are drawn at a low enough level that they can affect almost anything.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_tickedstroke_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_tickedstroke_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">TickedStroke patheffect</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This illustrates the use of transforms.offset_copy to make a transform that positions a drawing element such as a text string at a specified offset in screen coordinates (dots or inches) relative to a location given in any coordinates.">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_transoffset_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_transoffset.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">transforms.offset_copy</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The drawing order of artists is determined by their zorder attribute, which is a floating point number. Artists with higher zorder are drawn on top. You can change the order for individual artists by setting their zorder. The default value depends on the type of the Artist:">

.. only:: html

  .. image:: /gallery/misc/images/thumb/sphx_glr_zorder_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_misc_zorder_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Zorder Demo</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/misc/anchored_artists
   /gallery/misc/bbox_intersect
   /gallery/misc/contour_manual
   /gallery/misc/coords_report
   /gallery/misc/custom_projection
   /gallery/misc/customize_rc
   /gallery/misc/demo_agg_filter
   /gallery/misc/demo_ribbon_box
   /gallery/misc/fig_x
   /gallery/misc/fill_spiral
   /gallery/misc/findobj_demo
   /gallery/misc/font_indexing
   /gallery/misc/ftface_props
   /gallery/misc/histogram_path
   /gallery/misc/hyperlinks_sgskip
   /gallery/misc/image_thumbnail_sgskip
   /gallery/misc/keyword_plotting
   /gallery/misc/logos2
   /gallery/misc/multipage_pdf
   /gallery/misc/multiprocess_sgskip
   /gallery/misc/packed_bubbles
   /gallery/misc/patheffect_demo
   /gallery/misc/print_stdout_sgskip
   /gallery/misc/rasterization_demo
   /gallery/misc/set_and_get
   /gallery/misc/svg_filter_line
   /gallery/misc/svg_filter_pie
   /gallery/misc/table_demo
   /gallery/misc/tickedstroke_demo
   /gallery/misc/transoffset
   /gallery/misc/zorder_demo

